add keycloak integration

--- a/.env.development
+++ b/.env.development
@@ -12,3 +12,9 @@ VUE_APP_BASE_API = '/dev-api'
 # Detail:  https://github.com/vuejs/vue-cli/blob/dev/packages/@vue/babel-preset-app/index.js
 
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
+
+# keycloak options
+VUE_APP_KEYCLOAK_OPTIONS_URL = 'http://127.0.0.1:8080/auth'
+VUE_APP_KEYCLOAK_OPTIONS_REALM = 'demo'
+VUE_APP_KEYCLOAK_OPTIONS_CLIENTID = 'vue-element-admin-keycloak'
+VUE_APP_KEYCLOAK_OPTIONS_ONLOAD = 'login-required'
