--- a/.env.production
+++ b/.env.production
@@ -4,3 +4,8 @@ ENV = 'production'
 # base api
 VUE_APP_BASE_API = '/prod-api'
 
+# keycloak options
+VUE_APP_KEYCLOAK_OPTIONS_URL = 'http://127.0.0.1:8080/auth'
+VUE_APP_KEYCLOAK_OPTIONS_REALM = 'demo'
+VUE_APP_KEYCLOAK_OPTIONS_CLIENTID = 'vue-element-admin-keycloak'
+VUE_APP_KEYCLOAK_OPTIONS_ONLOAD = 'login-required'
